# H5Composites

./: .gitignore  .gitlab-ci.yml  ArrayDTypeUtils_8hxx_source.html  ArrayTraits_8h.html  ArrayTraits_8h_source.html  BitfieldTraits_8h.html  BitfieldTraits_8h_source.html  BufferConstructTraits_8hxx_source.html  BufferReadTraits_8h.html  BufferReadTraits_8h_source.html  BufferReadTraits_8hxx.html  BufferReadTraits_8hxx_source.html  BufferWriteTraits_8h.html  BufferWriteTraits_8h_source.html  BufferWriteTraits_8hxx_source.html  CMakeLists.txt  CommonDTypeUtils_8hxx_source.html  CompDTypeUtils_8h.html  CompDTypeUtils_8h_source.html  CompDTypeUtils_8hxx.html  CompDTypeUtils_8hxx_source.html  CompDTypeUtils_8icc_source.html  CompDTypeUtils_8ixx_source.html  CompositeDefinition_8h.html  CompositeDefinition_8h_source.html  CompositeDefinition_8icc_source.html  DTypeConversion_8hxx_source.html  DTypeConverter_8h.html  DTypeConverter_8h_source.html  DTypeDispatch_8h_source.html  DTypeDispatch_8hxx_source.html  DTypeDispatch_8icc_source.html  DTypeDispatch_8ixx_source.html  DTypeIterator_8h_source.html  DTypeIterator_8hxx_source.html  DTypePrecision_8hxx.html  DTypePrecision_8hxx_source.html  DTypePrinter_8h_source.html  DTypePrinting_8hxx.html  DTypePrinting_8hxx_source.html  (+328 more)
.github/workflows/: run-doxygen.yaml
doc/: Doxyfile
include/H5Composites/: ArrayDTypeUtils.hxx  ArrayTraits.h  BitfieldTraits.h  BufferConstructTraits.hxx  BufferMergeTraits.h  BufferReadTraits.h  BufferReadTraits.hxx  BufferWriteTraits.h  BufferWriteTraits.hxx  CommonDTypeUtils.hxx  CompDTypeUtils.h  CompDTypeUtils.hxx  CompDTypeUtils.icc  CompDTypeUtils.ixx  CompTypeUtils.h  Composite.h  Composite.icc  CompositeDefinition.h  CompositeDefinition.icc  ConstH5BufferView.hxx  DTypeConversion.h  DTypeConversion.hxx  DTypeConverter.h  DTypeDispatch.h  DTypeDispatch.hxx  DTypeDispatch.icc  DTypeDispatch.ixx  DTypeIterator.h  DTypeIterator.hxx  DTypePrecision.hxx  DTypePrinter.h  DTypePrinting.hxx  DTypeUtils.h  DTypeUtils.hxx  DTypes.h  DataBuffer.h  DataBufferTraits.h  DataSetUtils.h  DataSetUtils.hxx  EnumUtils.h  (+56 more)
include/H5Composites/traits/: Array.hxx  Bitfield.hxx  FixedLengthString.hxx  FixedLengthVector.hxx  String.hxx  Tuple.hxx  Vector.hxx
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  concepts_0.js  defines_0.js  enums_0.js  (+53 more)
src/: ArrayDTypeUtils.cxx  CMakeLists.txt  CommonDTypeUtils.cxx  CompDTypeUtils.cxx  CompTypeUtils.cxx  Composite.cxx  ConstH5BufferView.cxx  DTypeConversion.cxx  DTypeConverter.cxx  DTypeIterator.cxx  DTypePrecision.cxx  DTypePrinter.cxx  DTypePrinting.cxx  DTypeUtils.cxx  DTypes.cxx  DataBuffer.cxx  DataSetUtils.cxx  EnumUtils.cxx  FileMerger.cxx  FixedLengthStringTraits.cxx  GroupWrapper.cxx  H5Buffer.cxx  H5BufferConstView.cxx  H5BufferView.cxx  H5DType.cxx  H5Enum.cxx  H5VLen.cxx  IBufferReader.cxx  IBufferWriter.cxx  MergeFactory.cxx  MergeRules.cxx  MergeUtils.cxx  PrintBuffer.cxx  Reader.cxx  SmartBuffer.cxx  StringTraits.cxx  TypeRegister.cxx  VLenCopier.cxx  VLenDeleter.cxx  Writer.cxx  (+1 more)
src/traits/: FixedLengthString.cxx  String.cxx
test/: CMakeLists.txt  array.cxx  convert.cxx  dtypes.cxx  flstring.cxx  flvector.cxx  io.cxx  iterator.cxx  readwrite_primitives.cxx  struct.cxx  tuple.cxx  vector.cxx
util/: test.cxx
utils/: CMakeLists.txt  makeTestFile.cxx  merge.cxx  playground.cxx  test.cxx
